--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
-  background: #f7f7f7;
+  background-color: #f7f7f7;
   display: grid;
   gap: 60px;
   justify-items: center;
@@ -17,6 +17,12 @@ a {
   text-decoration: none;
 }
 
+ul {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+
 p,
 h1,
 h2,
@@ -25,8 +31,14 @@ h3 {
 }
 
 p {
-  font-size: 20px;
+  font-size: 1.25rem;
   line-height: 1.3;
+}
+
+.header {
+  display: grid;
+  justify-items: center;
+  gap: 60px;
 }
 
 .menu {
@@ -37,12 +49,17 @@ p {
 }
 
 .menu a {
-  text-align: center;
-  text-transform: uppercase;
-  color: black;
-  padding: 15px 30px;
+  display: block;
+  background: #ffffff;
+  padding: 1rem 2rem;
   border-radius: 4px;
-  background-color: #ffffff;
+  color: #000000;
+  text-transform: uppercase;
+  border: 2px solid #fff;
+}
+
+.menu a:hover {
+  border-color: #e21;
 }
 
 .conteudo {
@@ -62,7 +79,12 @@ p {
   justify-items: end;
 }
 
-.detalhe {
+.introducao h1 {
+  font-size: 2rem;
+}
+
+.introducao::before {
+  content: "";
   width: 60px;
   height: 4px;
   background: #ee2211;
@@ -73,20 +95,25 @@ p {
 }
 
 .botao {
-  padding: 15px 30px;
+  padding: 1rem 2rem;
   text-transform: uppercase;
   color: #fff;
-  background: #ee2211;
+  background: #e21;
   border-radius: 4px;
+}
+
+.botao:hover {
+  background: #900;
 }
 
 .subtitulo {
   text-transform: uppercase;
   color: rgba(0, 0, 0, 0.2);
-  font-size: 64px;
+  font-size: 4rem;
   text-align: right;
   padding: 40px;
   align-self: center;
+  background-image: url(./img/onda.svg);
 }
 
 .vantagens {
@@ -99,6 +126,15 @@ p {
   grid-template-columns: auto 1fr;
   gap: 10px 20px;
   padding: 20px;
+  border-left: 4px solid transparent;
+}
+
+.vantagens-item:nth-child(odd) {
+  background: #f7f7f7;
+}
+
+.vantagens-item:hover {
+  border-color: #e21;
 }
 
 .vantagens-item p {
